# racemo

./: .claudeignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  install.sh  install_linux.sh  install_mac.sh  install_windows.ps1  package-lock.json  package.json  playwright.config.ts  release-notes.md  vite.config.ts
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pr-check.yml  release-linux.yml
docs/: FAQ.md  PROTOCOL.md  accessibility.md  architecture.md  open-core.md  roadmap.md  self-hosting.md  testing.md
proto/: remote.proto
public/: remote.proto
scripts/: check-deps.cjs  check-version-sync.cjs
src/: App.tsx  DiffPage.tsx  EditorPage.tsx  SettingsPage.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  installer.nsh  tauri.conf.json  tauri.linux.conf.json  tauri.sign.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  notification.json
src-tauri/icons/: icon.icns
src-tauri/prompts/: auto-commit.md  commit.md  fix.md  pr.md  review.md
src-tauri/src/: auth.rs  claudelog.rs  codexlog.rs  geminilog.rs  git.rs  hooklog.rs  http_api.rs  keyboard_hook.rs  layout.rs  lib.rs  main.rs  opencodelog.rs  persistence.rs  process_util.rs  session.rs  updater.rs
src-tauri/src/commands/: claudelog.rs  codexlog.rs  geminilog.rs  git.rs  history.rs  hooklog.rs  mod.rs  opencodelog.rs  remote.rs  session.rs  streaming.rs  util.rs
src-tauri/src/ipc/: client.rs  conpty.rs  file_watcher.rs  mod.rs  osc7.rs  protocol.rs  server.rs  server_tests.rs
src-tauri/src/remote/: client.rs  host.rs  mod.rs  pairing.rs  server_host.rs  signaling.rs  webrtc_conn.rs
src/components/: ErrorBoundary.tsx  SearchBar.tsx  WindowResizeHandles.tsx
src/hooks/: useAppTheme.ts  useGlobalListeners.ts  useGlobalShortcuts.ts  useIpcSetup.ts
src/lib/: aiErrorGuide.ts  bridge.ts  commandRegistry.ts  commandTracker.ts  completionEngine.ts  conflictParser.ts  diffWindow.ts  editorWindow.ts  featureGate.ts  gitGraph.ts  (+21 more)
tests/: basic.spec.ts
winget/: JJs23.Racemo.installer.yaml  JJs23.Racemo.locale.en-US.yaml  JJs23.Racemo.yaml
(+222 files in other folders)
